<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:padding="@dimen/padding"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:focusableInTouchMode="false"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image"
        app:shapeAppearanceOverlay="@style/rounded_corners" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:hint="Unnamed Event"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_size_primary" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:hint="No Date Specified"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_size_secondary" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:backgroundTint="@color/neutralGray"
            android:drawableStart="@drawable/add"
            android:drawableTint="@color/white"
            android:text="@string/add_to_waitlist" />
    </LinearLayout>
</LinearLayout>