<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <include layout="@layout/chip_carousel" />

    <ListView
        android:id="@+id/events_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>