<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!-- Header Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_fragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Content Fragment (will be replaced dynamically) -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/content_fragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Footer Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/footer_fragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
