<resources>
    <string name="app_name">Napkin App</string>
<!--    Footer button names-->
    <string name="caption_eventsBtn">Events</string>
    <string name="caption_Btnregistered_events">Registered Events</string>
    <string name="caption_Btnmap">Map</string>
    <string name="caption_Btnscan_qr">Scan QR</string>
    <string name="caption_Btnmy_events">My Events</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temporLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="delete_notification_button">Delete notification button</string>
    <string name="title_text_view">Title Text View</string>
    <string name="message_text_view">Message Text View</string>
    <string name="read_notification_button">Read Notification Button</string>

<!--    Button captions-->
    <string name="add_to_waitlist">Join the Waitlist</string>
    <string name="remove_from_waitlist">Leave the Waitlist</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="cancel">Cancel</string>

    <string name="notification_not_chosen_name">Sorry, not selected for </string>
    <string name="notification_not_chosen_description">Unfortunately, you were not chosen for this event.</string>
    <string name="notification_chosen_name">Hooray, you were selected for </string>
    <string name="notification_chosen_description">Congratulations, you were chosen for </string>
    <string name="notification_custom_name">Message from organizer of</string>
    <string name="loading">Loading</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="close">Close</string>

</resources>